<resources>
    <string name="app_name">Gruppetto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">S\'inscrire/Se connecter</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_iwas_here">J\'y étais !</string>
    <string name="message">Tapez votre message :</string>
    <string name="messages_publies">Messages publiés :</string>
    <string name="contenu_message">Message :</string>
    <string name="jy_etais">J\'y étais !</string>
    <string name="bouton_valider">Valider</string>
    <string name="bouton_annuler">Annuler</string>
    <string name="date">Le </string>
    <string name="lieu"> à  </string>
    <string name="participe"> Je participe à l\'évènement :  </string>
    <string name="title_activity_join">Participe</string>
    <string name="title_activity_add_event">Ajouter un évènement</string>
    <string name="nameEvent"> Nom de l\'évènement :  </string>
    <string name="localisation"> Lieu / localisation : </string>
    <string name="showUser">Utilisateurs</string>
    <string name="userMenu">Utilisateur</string>
    <string name="menu_user">User menu</string>
    <string name="liste_des_utilisateurs">Liste des utilisateurs</string>
    <string name="liste_des_locations">Liste des locations</string>
    >>>>>>> master
</resources>
