<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.miage.gruppetto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.miage.gruppetto.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.miage.gruppetto.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.miage.gruppetto.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_listUsers"
        android:name="com.miage.gruppetto.ui.users.UsersFragment"
        android:label="@string/liste_des_utilisateurs"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_listLocations"
        android:name="com.miage.gruppetto.ui.locations.ListLocationsFragment"
        android:label="@string/liste_des_locations"
        tools:layout="@layout/fragment_send" />

</navigation>