<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_listUsers"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/liste_des_utilisateurs" />
        <item
            android:id="@+id/nav_listLocations"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/liste_des_locations" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/userMenu" />
    </group>


</menu>
