<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IWasHere"
    tools:showIn="@layout/activity_iwas_here">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <TextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <EditText
                android:id="@+id/editText_iwashere_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contenu_message"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/boutton_iwashere_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_valider"
                android:layout_marginRight="10dp"
                />
            <Button
                android:id="@+id/button_iwashere_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_annuler" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/messages_publies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/messages_publies" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listView_locationMessages"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>